# trade-with-arun

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONFIG_REFERENCE.md  DATA_PIPELINE.md  DEPLOYMENT.md  ENGINEERING_DECISIONS.md  FEATURE_ENGINEERING.md  INSTALL.md  MONITORING.md  NEWS_GUARD.md  OPERATIONS.md  PROJECT_STRUCTURE.md  RESEARCH_PLATFORM.md  RISK_ENGINE.md  ROADMAP.md  SIGNAL_ENGINE.md  SYSTEM_DESIGN.md  TELEGRAM_FORMAT.md  TESTING.md
reports/: PHASE0_PHASE1_SUMMARY.md  changes.diff  file_manifest.txt  final_metrics.json  phase0_variant_results.json  production_audit_metrics.json  v25_production_audit_summary.md
scripts/: build_zip.sh  install_systemd.sh
src/trade_with_arun.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/twa/: __init__.py  config.py  logging.py
tests/: __init__.py  conftest.py  signals_factory.py  test_backtest.py  test_config.py  test_correctness_regressions.py  test_data_adapters_health.py  test_data_adapters_shapes.py  test_features.py  test_ml_calibrator.py  test_models.py  test_news_guard.py  test_orchestrator_integration.py  test_production_audit_regressions.py  test_regime.py  test_research_integrity.py  test_risk_engine.py  test_signal_engine.py  test_telegram.py
tests/research/: test_benchmarking.py  test_calibration_pipeline.py  test_concept_drift.py  test_edge_validation.py  test_experiment_runner.py  test_feature_discovery.py  test_feature_drift.py  test_lab.py  test_point_in_time_harness.py  test_regime_lab.py  test_walk_forward.py
twa_changes_only/reports/: changes.diff  file_manifest.txt
twa_changes_only/scripts/: run_factor_research.py
twa_changes_only/tests/: test_signal_engine.py
(+55 files in other folders)
